# qwen3.5-9b-bfp8b-1xn300

./: .dockerignore  .gitignore  CLAUDE.md  CUDA_MIGRATION.md  Dockerfile  Makefile  OPTIMIZATION_PROGRESS_2026_03_09.md  README.md  entrypoint.sh
.github/workflows/: build-container.yml
kernels/compute/: eltwise_binary.cpp  gated_rmsnorm.cpp  gemv.cpp  residual_add.cpp  rmsnorm_fpu.cpp  rope.cpp  sigmoid_gate.cpp  softmax.cpp  ssm_delta_net.cpp  swiglu.cpp  swiglu_gemv_fused.cpp  swiglu_multicore.cpp
kernels/dataflow/: reader_binary_tiles.cpp  reader_binary_tiles_multicore.cpp  reader_gemv.cpp  reader_gemv_fused_norm.cpp  reader_gemv_fused_norm_fpu.cpp  reader_gemv_multicore.cpp  reader_rmsnorm.cpp  reader_rmsnorm_fpu.cpp  reader_rmsnorm_multicore.cpp  reader_single_input.cpp  reader_swiglu_gemv_fused.cpp  reader_two_inputs.cpp  writer_gemv.cpp  writer_gemv_multicore.cpp  writer_gemv_resadd.cpp  writer_gemv_split.cpp  writer_single_output.cpp  writer_tiles.cpp
src/: chat.cpp  engine.cpp  engine.h  gguf_loader.cpp  gguf_loader.h  main.cu  model.h  model_config.h  server.cpp  server.cu  tokenizer.cpp  utils.h
src/kernels/: attention.cu
src/kernels/dataflow/: reader_gemv_dram_sharded.cpp
src/tests/: test_inference.cpp
tests/: test_device.cpp  test_dram_bw.cpp  test_forward.cpp  test_inference.cpp  test_load_weights.cpp  test_matmul.cpp  test_mesh_overhead.cpp
tests/kernels/: reader_dram_bw.cpp
tools/: make_bfp8_gguf.cpp
tt_metal/: CMakeLists.txt
tt_metal/host/: engine.cpp  gguf_loader.cpp
tt_metal/kernels/compute/: rmsnorm_fpu.cpp  rmsnorm_gemv_fused.cpp
tt_metal/kernels/dataflow/: reader_gemv_dram_sharded.cpp  reader_gemv_fused_norm.cpp  reader_rmsnorm_multicore.cpp  writer_rmsnorm_fpu.cpp
tt_metal/tests/: test_dram_bw.cpp
tt_metal/tests/kernels/: compute_drain.cpp  compute_gemv_bench.cpp
